feat: Switch config format to INI
Speaking of which, I should improve iniplus so that it doesn't need that awful old case objects flag everytime.

Signed-off-by: penguinite <penguinite@tuta.io>

--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,6 @@ createdb
 editdb
 
 .vscode
-forum.json*
 browsertester
 setup_nimforum
 buildcss
@@ -23,3 +22,4 @@ nimforum.css
 /src/frontend/forum.js
 
 public/
+forum.ini*
